# gepard-train

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  pytest.ini
accelerate/: finetune_single.yaml  pretrain_fsdp.yaml
assets/dpo_seed/: short_focused_v2.jsonl
conf/: dpo.yaml  prepare.yaml  sft.yaml  train.yaml
conf/codec/: nano_21_5.yaml
conf/data/: full_corpus.yaml
conf/dpo/pairs/: default.yaml
conf/dpo/reward/: default.yaml
conf/dpo/sampling/: default.yaml
conf/dpo/training/: default.yaml
conf/experiment/: ft_wider_lora.yaml  pretrain_no_vc.yaml
conf/finetune/: none.yaml  sft_lora.yaml
conf/model/: gepard.yaml
conf/text_layout/: pretrain_stage.yaml  repeat_ft.yaml
conf/tokens/: qwen3_5.yaml
conf/trainer/: finetune_lora.yaml  pretrain.yaml
conf/voice_cloning/: disabled.yaml  qformer_frozen.yaml  qformer_supcon.yaml
docs/: AWS_nanocodec_deps.md  MODEL_GUIDE.md  NEW_LANGUAGE_GUIDE.md  STRUCTURE.md
gepard/: __init__.py
gepard/cli/: __init__.py  prepare.py  sft.py  train.py
gepard/config/: __init__.py  schema.py  store.py  validate.py
gepard/data/: __init__.py  collator.py  sampling.py
gepard/data/dpo/: __init__.py  pairs.py  progress.py  sample.py  score.py
gepard/data/preprocessing/: __init__.py  build_keep_index.py  prepare.py  processor.py  text_repetition.py
gepard/inference/: __init__.py  codec_wrapper.py  runner.py
gepard/logging/: __init__.py  core.py  dashboard.py  model_card.py
gepard/model/: __init__.py  checkpoint_io.py  codec_ops.py  configuration.py  lora.py  modeling.py  ref_compressor.py
gepard/model/losses/: __init__.py  dpo.py  supcon.py
gepard/training/: __init__.py  base.py  callbacks.py  dpo.py  sft.py
notebooks/: inference_demo.ipynb
scripts/: download_aws_dataset.sh  gen_regression_anchors.py  merge_lora_checkpoint.py  setup.sh  setup_dpo.sh  setup_inference.sh  system_deps.sh  upload_aws_dataset.sh  upload_to_hf.py
scripts/lib/: env_common.sh
