[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gepard"
version = "0.1.0"
description = "Gepard — autoregressive speech generation on a stock Qwen3.5 backbone, optimized via Direct Preference Optimization (DPO)."
requires-python = ">=3.12"
readme = "README.md"

# Declarative "safe" dependencies only — pure-python packages with no CUDA/NeMo
# install-ordering drama. The hard parts (CUDA-matched torch, NeMo codec, the
# NeMo→transformers re-pin, torchcodec matching) are handled imperatively in
# scripts/setup*.sh, which run `uv pip install -e .[<extra>]` LAST so these pins
# take effect on top of whatever NeMo dragged in.
dependencies = [
    "transformers==5.3.0",   # Qwen3.5 backbone; re-asserted after NeMo in dpo/inference
    "huggingface-hub",       # ships the `hf` CLI in base (the old [cli] extra is gone in 1.x)
    "safetensors",
    "hydra-core>=1.3.2",     # config composition + validation (pulls omegaconf)
    "omegaconf>=2.3.0",
    "numpy>=1.24.0",         # floor only — NeMo pins the exact build (1.26.x) in dpo/inference
    "rich",
]

[project.optional-dependencies]
# Phase 1/2 training (venv). torch/torchvision + flash-attn stay imperative.
train = [
    "accelerate==1.10.1",
    "datasets==4.8.2",
    "wandb",
]
# DPO data pipeline (venv_dpo). NeMo codec + torch/torchcodec stay imperative;
# these are the safe scoring/ASR-adjacent + codec-support deps (scipy/librosa are
# part of the NeMo codec stack).
dpo = [
    "datasets==4.8.2",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "jiwer",
    "soundfile",
    "matplotlib",
    "tqdm",
]
# Lean inference (venv_infer): the runner + codec support + waveform I/O.
# NeMo codec + torch stay imperative.
inference = [
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile",
]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/nineninesix/gepard"

[tool.setuptools.packages.find]
include = ["gepard*"]

[tool.setuptools]
py-modules = []
